--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Tasks</h1>
+<h1 class="tasks-header">Tasks</h1>
+
 
 <div id="tasks">
   <% @tasks.each do |task| %>
@@ -11,4 +12,5 @@
   <% end %>
 </div>
 
-<%= link_to "New task", new_task_path %>
+<%= link_to "New task", new_task_path, style: "font-size: 20px; text-align: center; color: #3588db;" %>
+<%= stylesheet_link_tag %>
